# KitsuneEngine

./: .clang-format  CMakeLists.txt  ECS_NOTES.md  README.md  main.cpp  notes.md
assets/: ow_cam.hpp
assets/shaders/: shader.slang  shader_constants.h  shader_old.slang
src/: main.cpp  temp_app.hpp
src/components/: camera.hpp  frame_pacer.hpp  hud.hpp  input.hpp  mesh.hpp  player_movement.hpp  tags.hpp  transform.hpp  velocity.hpp  window.hpp
src/core/: app.hpp  factories.cpp  factories.hpp  frame_pacer_state.hpp  settings.hpp
src/renderer/: common.hpp  context.cpp  context.hpp  frame.cpp  frame.hpp  pipeline.cpp  pipeline.hpp  render_loop.cpp  render_loop.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  swapchain.cpp  swapchain.hpp  types.hpp
src/systems/: app_controls_system.cpp  app_controls_system.hpp  camera.cpp  camera.hpp  camera_system.cpp  camera_system.hpp  frame_pacer.cpp  frame_pacer.hpp  frame_pacer_system.cpp  frame_pacer_system.hpp  hud.cpp  hud.hpp  hud_system.cpp  hud_system.hpp  input.cpp  input.hpp  input_system.cpp  input_system.hpp  player_movement.cpp  player_movement.hpp  player_movement_system.cpp  player_movement_system.hpp  render_system.cpp  render_system.hpp  settings.cpp  settings.hpp
src/temp_systems/: fps_limiter.hpp  ow_overlay.hpp
src/utils/: cam_utils.cpp  cam_utils.hpp  frame_pacer_utils.cpp  frame_pacer_utils.hpp  log_utils.hpp  mesh_loader.cpp  mesh_loader.hpp  settings_utils.cpp  settings_utils.hpp
systems/: fps_limiter.hpp  ow_cam.hpp  ow_move.hpp
